php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35147 __HALT_COMPILER() breaks with --enable-zend-multibyte
Submitted: 2005-11-08 03:04 UTC Modified: 2005-11-15 15:02 UTC
Votes:4
Avg. Score:2.5 ± 1.7
Reproduced:1 of 4 (25.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: cellog@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2005-11-08 (CVS) OS: *
Private report: No CVE-ID: None
 [2005-11-08 03:04 UTC] cellog@php.net
Description:
------------
if --enable-zend-multibyte, __HALT_COMPILER__ fails, no output


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-08 05:11 UTC] cellog@php.net
more details:

"make install-pear" uses install-pear-nozlib.phar, which uses __HALT_COMPILER__ to prevent parsing of the rest of the file, as this would result in redeclaration of class fatal errors (it contains internal .tars for the PEAR package, but uses its own PEAR to install these .tars).

When stepping through the invocation make install-pear does (sapi/cli/php -n -dshort_open_tag=0 -dsafe_mode=0 -derror_reporting=E_ALL pear/install-pear-nozlib.phar -d "/usr/local/lib/php" -b "/usr/local/bin") in gdb, it appears that zend_language_parser goes straight to an abort after the first return from the language_scanner, as if the scanner was unable to find any tokens.

I was unable to run through valgrind, all available memory was used up and the process was killed before any leaks were displayed.
 [2005-11-08 23:38 UTC] sniper@php.net
Making this critical, it really needs to be dealt with before 5.1 is released.
 [2005-11-09 09:41 UTC] tony2001@php.net
Would be good to have a short reproduce script, as I can't see any problems here.
 [2005-11-15 14:49 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2005-11-15 15:02 UTC] dmitry@php.net
Fixed in CVS PHP_5_1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 14:00:01 2026 UTC