Fixed bug #35147 (__HALT_COMPILER() breaks with --enable-zend-multibyte)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@200529 c90b9560-bf6c-de11-be94-00142212c4b1